--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,13 @@
 {
-  "bunVersion": "1.x"
+  "bunVersion": "1.x",
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization, target" }
+      ]
+    }
+  ]
 }
